<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
  <TableLayout
          android:layout_marginTop="@dimen/marginTop"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <TextView
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:gravity="left"/>
      <!--Person image-->
      <ImageView
              android:src="@drawable/ic_launcher"
              android:layout_width="0dp"
              android:layout_height="@dimen/picSize"
              android:gravity="center"
              android:layout_weight="2"
              android:scaleType="fitCenter"
              android:contentDescription="@string/image_desc"/>
      <!--Catch up image-->
      <ImageView
              android:src="@drawable/ic_launcher"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:gravity="center"
              android:layout_weight="1"
              android:scaleType="fitCenter"
              android:contentDescription="@string/catchup_desc"/>
    </TableRow>
  </TableLayout>
  <!--Name-->
  <TextView
          android:padding="@dimen/margin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Gabe Diaz-Barriga"
          android:layout_gravity="center"
          android:textStyle="bold"
          android:textSize="@dimen/nameSize"/>
  <!--Tags-->
  <LinearLayout
          android:padding="@dimen/margin"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin"
          android:gravity="center">
    <TextView
            android:text="Tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
          </LinearLayout>
  <!--Catch up image-->
  <ImageView
          android:src="@drawable/ic_launcher"
          android:layout_margin="@dimen/margin"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:scaleType="fitCenter"
          android:contentDescription="@string/new_tab_desc"/>
</LinearLayout>

